# ok-chaos

./: .gitignore  AGENTS.md  LICENSE  README.md  main.py  main_debug.py  pyproject.toml
.github/workflows/: ci.yml
assets/: README.md
data/cards/: README.md  schema_version.json
data/cards/characters/: character.template.json.example  haide_mali.json
datasets/cards/: README.md
datasets/cards/inbox/2026-07-17/s20260717-114847-312497-2076b1a9/: manifest.json
datasets/cards/reference/: README.md
datasets/cards/reference/haide_mali/: flash_layers.pending.json
datasets/cards/review/haide_mali/: common_flash.pending.json  epiphany.pending.json
docs/: ARCHITECTURE.md  CARD_SYSTEM.md  HANDOFF.md  ROADMAP.md
scripts/: build.ps1  cards.ps1  run-debug.ps1  run.ps1  setup.ps1  test.ps1
src/: __init__.py  bootstrap.py  config.py  privacy.py
src/chaos/: __init__.py  engine.py  model.py  resources.py  settings.py  state.py  text.py
src/chaos/cards/: __init__.py  catalog.py  cli.py  collection_plan.py  collector.py  effects.py  enums.py  epiphany.py  flash_recognizer.py  presentation.py  runtime_index.py  schema.py
src/chaos/handlers/: __init__.py  registry.py  system.py
src/tasks/: ChaosTask.py  __init__.py
tests/: helpers.py  test_card_catalog.py  test_card_collection_plan.py  test_card_collector.py  test_card_presentation.py  test_card_schema.py  test_config.py  test_engine.py  test_epiphany_splitter.py  test_flash_recognizer.py  test_flash_reference.py  test_handlers.py  test_resources.py  test_runtime_card_index.py  test_settings.py  test_text.py
(+1 files in other folders)
